Fix appearance on mobile (modern mobiles I guess)

--- a/src/shared/styles.css
+++ b/src/shared/styles.css
@@ -145,3 +145,36 @@ h1 {
   64%      { color: #B10DC9; }
   80%      { color: #FF4136; }
 }
+
+@media (max-width: 600px) {
+  .slots {
+    width: 335px;
+  }
+
+  .slot-panel {
+    grid-column: span 2;
+  }
+
+  main > button {
+    grid-row: 2;
+    grid-column: 2;
+  }
+
+  main {
+    width: 100%;
+  }
+
+  .panel {
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+  }
+
+  .buttons button {
+    margin-bottom: 1rem;
+  }
+
+  h1 {
+    font-size: 2.3rem;
+  }
+
+}
